[package]
name = "cancellable-sleep"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
# tokio uses rt-multi-thread by default
tokio = { version = "1", features = ["full"] }